--- a/gb/23/12/23/n14142194.md
+++ b/gb/23/12/23/n14142194.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新唐人快报】党管游戏 网易腾讯5000亿蒸发</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/12/id14142246-1200x800-600x400.jpg" />///image2=```diff
 - 蒸发5000亿！中共打压网游业；买不了了！中共求美豁免俄企；加剧！PM2.5十年首增；都没钱了？“2元面包店”火了；极端低温！钱塘江冻结；剩空壳？香港地标酒吧欲关闭；放宽！日本拟向美交付导弹。（《新唐人快报》提供）
@@ -8,11 +8,12 @@
 <h6>蒸发5000亿！中共打压网游业；买不了了！中共求美豁免俄企；加剧！PM2.5十年首增；都没钱了？“2元面包店”火了；极端低温！钱塘江冻结；剩空壳？香港地标酒吧欲关闭；放宽！日本拟向美交付导弹。（《新唐人快报》提供）
 </h6>
 <hr>
-	<p>【大纪元2023年12月23日讯】观众朋友们好，欢迎收看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA%E5%BF%AB%E6%8A%A5.md#1">新唐人快报</a>，我是天心。今天是美东时间12月22日，星期五。订阅新唐人，了解最新要闻。</p>
-<p>今天焦点：蒸发5000亿！<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%88%8F.md#1">游戏</a>股急跌，中共打压网游业；买不了了！中共申请美豁免俄企；加剧！中国PM2.5十年来首增；都没钱了？“2元面包店”火了；遭起诉！中信前总经理被双开；极端低温！钱塘江被冻住，威海大雪破纪录；只剩空壳？香港地标酒吧拟关闭；放宽！日本拟交付美爱国者导弹。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://divmj5v44rbg.cloudfront.net/T7fMT7azw"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/ICU6hTayfJw?si=27k2qleuL0J2Ed1Z" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
-<h2>【中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%B8%E6%88%8F.md#1">游戏</a>股暴跌 <ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BD%91%E6%98%93.md#1">网易</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%85%BE%E8%AE%AF.md#1">腾讯</a>蒸发千亿】</h2>
-<p>首先来关注今天游戏产业的重磅消息。中国多家A股游戏公司，12月22日股票同时暴跌。港股方面，截至当天下午4点收盘，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BD%91%E6%98%93.md#1">网易</a>暴跌24.6%，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%85%BE%E8%AE%AF.md#1">腾讯</a>跌12.35%，哔哩哔哩下跌9.67%，心动公司、中手游、禅游科技等，都跌超10%。其中，网易跌掉一年来所有涨幅。同花顺iFinD数据显示，A股游戏板块总市值一日蒸发457亿元。网易和腾讯两大游戏巨头，市值共蒸发5045亿港元，折合人民币4607亿元。</p>
+	<p>【大纪元2023年12月23日讯】观众朋友们好，欢迎收看新唐人快报，我是天心。今天是美东时间12月22日，星期五。订阅新唐人，了解最新要闻。</p>
+<p>今天焦点：蒸发5000亿！游戏股急跌，中共打压网游业；买不了了！中共申请美豁免俄企；加剧！中国PM2.5十年来首增；都没钱了？“2元面包店”火了；遭起诉！中信前总经理被双开；极端低温！钱塘江被冻住，威海大雪破纪录；只剩空壳？香港地标酒吧拟关闭；放宽！日本拟交付美爱国者导弹。</p>
+</p>
+<p><center><a title="YouTube video player" src=""></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/I2g&#29983/embed/ICU6hTayfJw?si=27k2qleuL0J2Ed1Z" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<h2>【中国游戏股暴跌 网易腾讯蒸发千亿】</h2>
+<p>首先来关注今天游戏产业的重磅消息。中国多家A股游戏公司，12月22日股票同时暴跌。港股方面，截至当天下午4点收盘，网易暴跌24.6%，腾讯跌12.35%，哔哩哔哩下跌9.67%，心动公司、中手游、禅游科技等，都跌超10%。其中，网易跌掉一年来所有涨幅。同花顺iFinD数据显示，A股游戏板块总市值一日蒸发457亿元。网易和腾讯两大游戏巨头，市值共蒸发5045亿港元，折合人民币4607亿元。</p>
 <p>美股方面，12月22日晚，中概游戏相关股美股盘前普跌，网易跌近24%，哔哩哔哩跌逾11%，虎牙直播跌逾6%，斗鱼跌逾3%。</p>
 <p>除了单一股票受到冲击，A股市场的多只游戏传媒类ETF也大幅走低。 游戏ETF、游戏动漫ETF等跌停。 同时，游戏传媒、文娱传媒ETF等，也跌幅超过6%。</p>
 <p>此外，文化传媒、短剧、AI应用题材全线下挫，四千多只股票飘绿，三大股指收跌。</p>
@@ -39,8 +40,7 @@
 <p>5月29日，李格平从公司被带走。6月1日晚，中信建投公告称，他因“个人原因”提出辞职。6月21日，官方再发公告，他的职务由60岁的董事长王常青代为履行。</p>
 <p>但知情人士向财联社透露，李格平主要违纪和涉嫌违法的问题，并不是发生在中信建投证券任职期间。</p>
 <p>今年以来，中共多位金融高官落马。截至11月12日，中纪委网站至少披露87名金融高官被查。其中53人为银行机构的官员。</p>
-</p>
-<p><center><a title="蒸发5000亿！中共打压网游业；买不了了！中共求美豁免俄企；加剧！PM2.5十年首增；都没钱了？2元面包店火了；极端低温！钱塘江冻结；剩空壳？香港地标酒吧欲关闭；日本拟向美交付导弹 | #新唐人快报" src="https://www.ganjingworld.com/embed/1gd4aes9ua45PwskRHCko8B8I10o1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<p><center><a title="蒸发5000亿！中共打压网游业；买不了了！中共求美豁免俄企；加剧！PM2.5十年首增；都没钱了？2元面包店火了；极端低温！钱塘江冻结；剩空壳？香港地标酒吧欲关闭；日本拟向美交付导弹 | #新唐人快报" src=""></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/I2g&#29983/embed/1gd4aes9ua45PwskRHCko8B8I10o1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <h2>【香港金融中心酒吧拟关闭】</h2>
 <p>香港金融中心标志性的天台酒吧SAVVA，12月1日宣布明年5月租约到期后结束营业。香港一名证券公司职员，向韩国媒体的《朝鲜日报》表示，“似乎是连续4年香港股市下跌的趋势让酒吧关门了，让人感到郁闷”。</p>
 <p>报导提到，这家酒吧拥有香港最佳景观的酒吧，过去16年来，是全球金融人士杯觥交错的据点。它的关闭显示香港只剩外壳。香港恒生指数从2020年至去年，连续3年下跌，今年以来又跌超17%。此外，今年以来有55家企业从港股退市，香港股市的首次公开募股（IPO）规模也萎缩至3年前的十分之一。</p>
@@ -48,44 +48,38 @@
 <p>今天消息，日本12月22日表示修改了武器出口政策，准备向美国运送爱国者导弹，这是日本9年来第一次的重大改革。先前日本规定只能出口武器零件，禁止交付成品。22日当天，日本内阁官房长官林芳正在记者会上表示，这不但有利于日本的安全，也有利于更广泛的印太地区的和平与稳定。</p>
 <p>日本内阁当天批准了创纪录的军事预算，明年国防开支激增16%以上，旨在加速部署能够打击中共或朝鲜的远程巡航导弹。</p>
 <p>一名日本官员向路透社表示，这些导弹将用于补充美军的军火库，以保障印太地区的安全。</p>
-<p>好的，锁定最新要闻，请订阅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA%E5%BF%AB%E6%8A%A5.md#1">新唐人快报</a>，别忘了留言和点赞，我们一起 传播真相。感谢您的收看，再会。</p>
-<p>欢迎订阅YouTube频道：<ahref=""></a><a href="https://divmj5v44rbg.cloudfront.net/T7fMT7azw"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/@NTDNEWSFLASH">"></a><a href="https://divmj5v44rbg.cloudfront.net/T7fMT7azw"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/@NTDNEWSFLASH</a></p>
-<p>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e6%96%b0%e5%94%90%e4%ba%ba%e5%bf%ab%e5%a0%b1.md#1">新唐人快报</a>》制作组</p>
+<p>好的，锁定最新要闻，请订阅新唐人快报，别忘了留言和点赞，我们一起 传播真相。感谢您的收看，再会。</p>
+<p>欢迎订阅YouTube频道：<ahref=""></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/I2g&#29983/@NTDNEWSFLASH">"></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/I2g&#29983/@NTDNEWSFLASH</a></p>
+<p>《<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%96%b0%e5%94%90%e4%ba%ba%e5%bf%ab%e5%a0%b1.md#1">新唐人快报</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
-<hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/15/n14136751.md#1">【新唐人快报】急需现金抵债 碧桂园和万达分手</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/16/n14137496.md#1">【新唐人快报】全民禁言 中共清零敏感经济言论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/19/n14139131.md#1">【新唐人快报】商汤科技CEO汤晓鸥猝死疑云</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/20/n14139879.md#1">【新唐人快报】人民日报前副总编病亡 生前被追查</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/12/8/10/n3655834.md#1" target="_blank">王华：闲谈西方的签名与东方的手印</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">从上海到巴黎 前国企高管的坚守之路</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141385.md#1">【未解之谜】留意！它们发出的预警信号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136260.md#1">血红天空 雷打雪  亡朝前夕怪异天象知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133555.md#1">古代这些高官出仕前皆梦得神示</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138940.md#1">【未解之谜】虎鲸暴走之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142016.md#1">【中国禁闻】美中重启军事高层沟通 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142534.md#1">【新闻大破解】不只介选 中共对自由世界颠覆战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142141.md#1">【菁英论坛】南海对抗升级 美中菲都难退让</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141135.md#1">岳山：王小洪罕见陪党魁出访 国内维稳异常</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142075.md#1">叶剑英孙女叶明子与美国银行家离婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141754.md#1">专家：2024年中共政局凶险 或突发叛乱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142160.md#1">赵少康政见发表会上发生重大口误 舆论哗然</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141362.md#1">黎姿曾因弟出车祸退圈 如今黎婴站立拍全家福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141408.md#1">央视书画节目总导演楼建军猝死 终年56岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142089.md#1">梁朝伟拒绝再搭档刘嘉玲拍戏 网友笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14142116.md#1">王家卫讲戏难理解？唐嫣称与胡歌最初都听不懂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：晶莹华贵 施华洛世奇岁末有约</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/28/n11686220.md#1">全球美味圣诞大餐 各国都吃什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114197.md#1">身体有毒素 拍打可以解除很多酸痛问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139620.md#1">简单几招 让家里的猫咪与室内植物和平共处</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/23/n14142194.htm">【新唐人快报】党管游戏 网易腾讯5000亿蒸发</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142194.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的人是如何过年的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421721.md#1">【军事情报局】中共所谓六代机是真六代机吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422181.md#1">【菁英论坛】中共谋划对美交易 习普谁先卖谁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414594.md#1">19年老员工推荐7样东西 当下在Costco买最佳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421165.md#1">大陆民众返乡过年 为省钱弃高铁挤火车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421697.md#1">沈舟：054B护卫舰——中共海军的无奈选择</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421651.md#1">遭封杀3年 邓伦不露脸不具名拍杂志试水复出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420870.md#1">奥斯卡入围名单揭晓 《璀璨女人梦》成大赢家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421683.md#1">港星薛凯琪至今没出嫁 直呼TVB多少要负点责</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1">吃草饲牛肉或榖饲牛肉 哪种更健康？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416125.md#1">有备无患 日本家庭避难包必备这些物资</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/23/n14142194.htm">【新唐人快报】党管游戏 网易腾讯5000亿蒸发</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/23/n14142194.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
